<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_overview" />

        <item
            android:id="@+id/nav_goods"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_goods" />

        <item
            android:id="@+id/nav_politics"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_politics" />

        <item
            android:id="@+id/nav_university"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_university" />

        <item
            android:id="@+id/nav_tavern"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tavern" />

        <item
            android:id="@+id/nav_defense"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_defense" />

        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_team" />

        <item
            android:id="@+id/nav_goods_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_goods_settings" />

        <item
            android:id="@+id/nav_development"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_development" />

        <item
            android:id="@+id/nav_expeditions"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_expeditions" />

        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_world" />
    </group>
</menu>