<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_overview">

    <fragment
        android:id="@+id/nav_overview"
        android:name="org.niebiosa.sgame.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview" />
    <fragment
        android:id="@+id/nav_goods"
        android:name="org.niebiosa.sgame.GoodsFragment"
        android:label="@string/menu_goods"
        tools:layout="@layout/fragment_goods" />
    <fragment
        android:id="@+id/nav_politics"
        android:name="org.niebiosa.sgame.PoliticsFragment"
        android:label="@string/menu_politics"
        tools:layout="@layout/fragment_politics" />
    <fragment
        android:id="@+id/nav_university"
        android:name="org.niebiosa.sgame.UniversityFragment"
        android:label="@string/menu_university"
        tools:layout="@layout/fragment_university" />
    <fragment
        android:id="@+id/nav_tavern"
        android:name="org.niebiosa.sgame.TavernFragment"
        android:label="@string/menu_tavern"
        tools:layout="@layout/fragment_tavern" />
    <fragment
        android:id="@+id/nav_defense"
        android:name="org.niebiosa.sgame.DefenseFragment"
        android:label="@string/menu_defense"
        tools:layout="@layout/fragment_defense" />
    <fragment
        android:id="@+id/nav_team"
        android:name="org.niebiosa.sgame.TeamFragment"
        android:label="@string/menu_team"
        tools:layout="@layout/fragment_team" />
    <fragment
        android:id="@+id/nav_goods_settings"
        android:name="org.niebiosa.sgame.GoodsSettingsFragment"
        android:label="@string/menu_goods_settings"
        tools:layout="@layout/fragment_goods_settings" />
    <fragment
        android:id="@+id/nav_development"
        android:name="org.niebiosa.sgame.DevelopmentFragment"
        android:label="@string/menu_development"
        tools:layout="@layout/fragment_development" />
    <fragment
        android:id="@+id/nav_expeditions"
        android:name="org.niebiosa.sgame.ExpeditionsFragment"
        android:label="@string/menu_expeditions"
        tools:layout="@layout/fragment_expeditions" />
    <fragment
        android:id="@+id/nav_world"
        android:name="org.niebiosa.sgame.WorldFragment"
        android:label="@string/menu_world"
        tools:layout="@layout/fragment_world" />


</navigation>