<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ComponentGoodsFragment">

    <LinearLayout
        android:id="@+id/goodsWidget"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/goodsText"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMithril"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goods_mithril"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewWood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goods_wood"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewBread"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goods_bread"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewFish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goods_fish"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewMithril"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/icon_goods_mithril" />

            <ImageView
                android:id="@+id/imageViewWood"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/icon_goods_wood" />

            <ImageView
                android:id="@+id/imageViewBread"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/icon_goods_bread" />

            <ImageView
                android:id="@+id/imageViewFish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/icon_goods_fish" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/goodsValues"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textGoodsValueMithril"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_mithril_value"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textGoodsValueWood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_wood_value"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textGoodsValueBread"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_bread_value"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textGoodsValueFish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_fish_value"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
