<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".GoodsFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="org.niebiosa.sgame.ComponentGoodsFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollViewBuildingsDesc"
        android:layout_width="409dp"
        android:layout_height="199dp"
        android:layout_marginEnd="2dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentContainerView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:text="@string/buildings_desc"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout_1_Images"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/scrollViewBuildingsDesc">

        <ImageView
            android:id="@+id/imageView_1_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/building_goods_mine" />

        <ImageView
            android:id="@+id/imageView_1_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/building_goods_sawmill" />

        <ImageView
            android:id="@+id/imageView_1_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/building_goods_bakery" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_1_Texts"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_1_Images"
        >

        <TextView
            android:id="@+id/textBuilding_1_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/building_mine"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textBuilding_1_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/building_sawmill"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textBuilding_1_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/building_bakery"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_2_Images"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_1_Texts">

        <ImageView
            android:id="@+id/imageView_2_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/building_goods_mine" />

        <ImageView
            android:id="@+id/imageView_2_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/building_goods_sawmill" />

        <ImageView
            android:id="@+id/imageView_2_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/building_goods_bakery" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_2_Texts"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_2_Images"
        >

        <TextView
            android:id="@+id/textBuilding_2_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/building_storage_mithril"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textBuilding_2_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/building_storage_wood"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textBuilding_2_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/building_storage_fish"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_3_Images"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_2_Texts">

        <ImageView
            android:id="@+id/imageView_3_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/building_goods_fisherman" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_3_Texts"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_3_Images"
        >

        <TextView
            android:id="@+id/textBuilding_3_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/building_mine"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />

    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>